# HysterionPerms

./: Cargo.toml  config.toml
hysterion_perms/: Cargo.toml  config.toml
hysterion_perms/src/: config.rs  db.rs  lib.rs  perms_executor.rs  ping.rs  utils.rs
hysterion_perms/src/commands/: mod.rs  perms.rs
hysterion_perms/src/commands/perms/: add.rs  info.rs  mod.rs  role.rs
hysterion_perms/src/permissions/: mod.rs
hysterion_prison/: Cargo.toml
src/: config.rs  db.rs  lib.rs
src/commands/perms/: add.rs  info.rs  role.rs
src/permissions/: mod.rs
