[package]
name = "hysterion_perms"
version = "0.1.0"
edition = "2021"
authors = ["urielsv", "feliventu"]
description = "Hysterion Permissions Plugin"

[lib] 
crate-type = ["cdylib"]

[dependencies]
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" } 
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

async-trait = "0.1.85"
tokio = { version = "1.43", features = [ "full" ] }
lazy_static = "1.5.0"

env_logger = "0.11.6"
log = "0.4.25"

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"